--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                     <p>Linguagem usada para estilizar páginas web, controlando cores, fontes, layouts e a aparência visual de elementos HTML.</p>
                     <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
                 </div>  
+                <div class="Card">
+                    <img src="img/php.png" alt="Icon CSS">
+                    <h3>PHP</h3>
+                    <p>Linguagem de programação amplamente utilizada para desenvolver sites dinâmicos e aplicações web, rodando no servidor para gerar conteúdo HTML.</p>
+                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
+                </div>  
         </div>
         </div>
     </section>
