--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BitFlow Udia</title>
-    <meta name="description"
-        content="Aprenda HTML5, CSS3 e técnicas SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo.">
     <link rel="icon" href="img/p1.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -46,8 +44,13 @@
             </div>
             <div id="textoSobre">
                 <h2>Sobre a BitFLow</h2>
-                <p>A BitFlow nasceu em 2025 de uma paixão pela tecnologia e inovação, idealizada por Caio Silva de Freitas enquanto ainda trilhava sua jornada de estudos. O que começou como um projeto acadêmico e a busca incessante por conhecimento no universo digital, hoje se consolidou como uma empresa de referência em soluções tecnológicas para negócios de todos os portes.
-                Na BitFlow, somos especialistas em transformar ideias em realidade digital. Nossas soluções são desenvolvidas com as tecnologias mais modernas e eficientes do mercado, garantindo performance, segurança e escalabilidade.</p>
+                <p>A BitFlow nasceu em 2025 de uma paixão pela tecnologia e inovação, idealizada por Caio Silva de
+                    Freitas enquanto ainda trilhava sua jornada de estudos. O que começou como um projeto acadêmico e a
+                    busca incessante por conhecimento no universo digital, hoje se consolidou como uma empresa de
+                    referência em soluções tecnológicas para negócios de todos os portes.
+                    Na BitFlow, somos especialistas em transformar ideias em realidade digital. Nossas soluções são
+                    desenvolvidas com as tecnologias mais modernas e eficientes do mercado, garantindo performance,
+                    segurança e escalabilidade.</p>
             </div>
         </div>
     </section>
@@ -56,7 +59,10 @@
         <div class="Container Flex3">
             <div>
                 <h2>O que oferecemos ?</h2>
-                <p>Na BitFlow, entregamos soluções digitais personalizadas e de alto desempenho. Criamos websites impactantes e sistemas web sob medida que impulsionam seu negócio. Nossa expertise em tecnologias de ponta garante plataformas otimizadas para performance, segurança e crescimento. Contamos com consultoria estratégica para maximizar sua presença online e otimizar seus resultados.</p>
+                <p>Na BitFlow, entregamos soluções digitais personalizadas e de alto desempenho. Criamos websites
+                    impactantes e sistemas web sob medida que impulsionam seu negócio. Nossa expertise em tecnologias de
+                    ponta garante plataformas otimizadas para performance, segurança e crescimento. Contamos com
+                    consultoria estratégica para maximizar sua presença online e otimizar seus resultados.</p>
             </div>
             <div id="logoPrincipal">
                 <img src="img/desenv.png" class="logP" alt="Logo do Site One Page">
@@ -71,73 +77,81 @@
                 <div class="Card">
                     <img src="img/javascript.png" alt="Icon JavaScript">
                     <h3>JavaScript</h3>
-                    <p>Linguagem essencial para tornar websites interativos e dinâmicos, adicionando funcionalidades e animações.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
+                    <p>Linguagem essencial para tornar websites interativos e dinâmicos, adicionando funcionalidades e
+                        animações.</p>
+                    <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"
+                        class="Botao">Saiba +</a>
                 </div>
                 <div class="Card">
                     <img src="img/java.png" alt="Icon JAVA">
                     <h3>Java</h3>
-                    <p>Linguagem de programação versátil e robusta, usada em aplicações complexas, sistemas corporativos e desenvolvimento Android.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-                </div>  
+                    <p>Linguagem de programação versátil e robusta, usada em aplicações complexas, sistemas corporativos
+                        e desenvolvimento Android.</p>
+                    <a href="https://dev.java/" target="_blank" class="Botao">Saiba +</a>
+                </div>
                 <div class="Card">
                     <img src="img/mysqlworkbench.png" alt="Icon MySQL">
                     <h3>MySQL</h3>
-                    <p>Sistema de gerenciamento de banco de dados relacional, ideal para armazenar e organizar grandes volumes de informações.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-                </div>   
+                    <p>Sistema de gerenciamento de banco de dados relacional, ideal para armazenar e organizar grandes
+                        volumes de informações.</p>
+                    <a href="https://www.mysql.com/" target="_blank" class="Botao">Saiba +</a>
+                </div>
                 <div class="Card">
                     <img src="img/html.png" alt="Icon HTML">
                     <h3>HTML</h3>
-                    <p>A linguagem padrão para criar e estruturar o conteúdo de páginas web, definindo títulos, parágrafos, imagens e links.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-                </div>  
+                    <p>A linguagem padrão para criar e estruturar o conteúdo de páginas web, definindo títulos,
+                        parágrafos, imagens e links.</p>
+                    <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank" class="Botao">Saiba
+                        +</a>
+                </div>
                 <div class="Card">
                     <img src="img/css.png" alt="Icon CSS">
                     <h3>CSS</h3>
-                    <p>Linguagem usada para estilizar páginas web, controlando cores, fontes, layouts e a aparência visual de elementos HTML.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-                </div>  
+                    <p>Linguagem usada para estilizar páginas web, controlando cores, fontes, layouts e a aparência
+                        visual de elementos HTML.</p>
+                    <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank" class="Botao">Saiba +</a>
+                </div>
                 <div class="Card">
                     <img src="img/php.png" alt="Icon CSS">
                     <h3>PHP</h3>
-                    <p>Linguagem de programação amplamente utilizada para desenvolver sites dinâmicos e aplicações web, rodando no servidor para gerar conteúdo HTML.</p>
-                    <a href="https://youtu.be/EUpLb_A8cTI" target="_blank" class="Botao">Saiba +</a>
-                </div>  
-        </div>
+                    <p>Linguagem de programação amplamente utilizada para desenvolver sites dinâmicos e aplicações web,
+                        rodando no servidor para gerar conteúdo HTML.</p>
+                    <a href="https://www.php.net/" target="_blank" class="Botao">Saiba +</a>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Rodapé -->
     <address>
         <h2>CONTATO</h2>
-        <div class="Container Flex6">
-            <div id="contato">
-                <a href="https://api.whatsapp.com/send?phone=5534998163788" target="_blank">
-                    <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no WhatsApp" class="whatsapp">
-                    <p>(34) 99816-3788</p>
-                </a>
+        <div class="Container Flex6 contact-layout-container">
+            <div class="contact-info-row">
+                <div class="contact-item">
+                    <a href="https://api.whatsapp.com/send?phone=5534998163788" target="_blank">
+                        <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no WhatsApp" class="whatsapp">
+                        <p>(34) 99816-3788</p>
+                    </a>
+                </div>
+                <div class="contact-item">
+                    <a href="mailto:freitass_caio@outlook.com" title="Enviar E-mail">
+                        <img src="img/email.png" alt="email" class="email">
+                        <p>freitass_caio@outlook.com</p>
+                    </a>
+                </div>
             </div>
-            <div>
-                <a href="mailto:freitass_caio@outlook.com" title="Enviar E-mail">
-                    <img src="img/email.png" alt="email" class="email">
-                    <p>freitass_caio@outlook.com</p>
-                </a>
+
+            <div class="copyright-social-row">
+                <p>&copy;<span id="copyrightYear"></span> - <a href="https://joseassis.com.br/" target="_blank">Caio
+                        Silva Freitas</a></p>
+                <div id="social">
+                    <a href="https://github.com/freitasscaio" target="_blank"><img src="img/github.png"
+                            alt="github"></a>
+                    <a href="https://www.linkedin.com/in/silvafcaio/" target="_blank"><img src="img/linkedin.png"
+                            alt="linkedin"></a>
+                </div>
             </div>
         </div>
     </address>
-    <footer>
-        <div class="Container Flex5">
-            <div>
-                <p>&#169;<span id="copyrightYear"></span> - <a href="https://joseassis.com.br/" target="_blank">Caio Silva Freitas</a></p>
-            </div>
-            <div id="social">
-                <a href="https://github.com/freitasscaio" target="_blank"><img src="img/github.png"
-                        alt="youtube"></a>
-                <a href="https://www.linkedin.com/in/silvafcaio/" target="_blank"><img src="img/linkedin.png"
-                        alt="linkedin"></a>
-            </div>
-        </div>
-    </footer>
     <a href="#inicio" id="topo"><img src="img/arrow.png" alt="topo do site"></a>
 
     <script>
